# VectorDBBench

./: .dockerignore  Dockerfile  main.py  pyproject.toml
vectordb_bench/: __init__.py
vectordb_bench/backend/clients/: __init__.py
vectordb_bench/backend/clients/tidb/: config.py  tidb.py
