[build-system]
requires = ["setuptools>=67.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"vectordb_bench.results" = ["*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vectordb_bench", "vectordb_bench.cli"]

[project]
name = "vectordbbench-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore==2.21.1",
    "aiohappyeyeballs==2.4.8",
    "aiohttp==3.11.13",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "aliyun-python-sdk-core==2.16.0",
    "aliyun-python-sdk-kms==2.16.5",
    "altair==5.5.0",
    "anyio==4.8.0",
    "attrs==25.1.0",
    "beautifulsoup4==4.13.3",
    "black==25.1.0",
    "blinker==1.9.0",
    "botocore==1.37.1",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "contourpy==1.3.1",
    "crcmod==1.7",
    "cryptography==44.0.2",
    "cycler==0.12.1",
    "entrypoints==0.4",
    "environs==14.0.0",
    "faker==36.1.1",
    "favicon==0.7.0",
    "fonttools==4.56.0",
    "frozenlist==1.5.0",
    "fsspec==2025.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "grpcio==1.67.1",
    "grpcio-tools==1.67.1",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "htbuilder==0.9.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jinja2==3.1.5",
    "jmespath==0.10.0",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kiwisolver==1.4.8",
    "lxml==5.3.1",
    "markdown==3.7",
    "markdownlit==0.0.7",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.1",
    "milvus-lite==2.4.11",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "mysql-connector-python==9.2.0",
    "mysqlclient==2.2.7",
    "narwhals==1.29.0",
    "numpy==2.2.3",
    "oss2==2.19.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotly==6.0.0",
    "pluggy==1.5.0",
    "polars==1.24.0",
    "portalocker==2.10.1",
    "prometheus-client==0.21.1",
    "propcache==0.3.0",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pydantic==1.10.21",
    "pydeck==0.9.1",
    "pymdown-extensions==10.14.3",
    "pymilvus==2.5.4",
    "pymysql==1.1.1",
    "pyparsing==3.2.1",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "qdrant-client==1.13.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.23.1",
    "ruff==0.9.10",
    "s3fs==2025.2.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "setuptools==75.8.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "st-annotated-text==4.0.2",
    "st-theme==1.2.3",
    "streamlit==1.43.0",
    "streamlit-autorefresh==1.0.1",
    "streamlit-camera-input-live==0.2.0",
    "streamlit-card==1.0.2",
    "streamlit-embedcode==0.1.2",
    "streamlit-extras==0.5.5",
    "streamlit-faker==0.0.3",
    "streamlit-image-coordinates==0.1.9",
    "streamlit-keyup==0.3.0",
    "streamlit-toggle-switch==1.0.2",
    "streamlit-vertical-slider==2.5.5",
    "tenacity==9.0.0",
    "threadpoolctl==3.5.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "ujson==5.10.0",
    "urllib3==2.3.0",
    "validators==0.34.0",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "yarl==1.18.3",
]
